# termjump

./: .gitignore  README.md  pyproject.toml
termjump/: __init__.py  cli.py  editor.py  shell.py
tests/: test_termjump.py
