[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termjump"
version = "0.1.0"
description = "Click-to-position terminal command editor for zsh"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["terminal", "cli", "zsh", "editor", "readline", "cursor"]
dependencies = [
  "prompt_toolkit>=3.0.0",
]

[project.scripts]
termjump      = "termjump.cli:termjump_main"
termjump-edit = "termjump.cli:termjump_edit_main"

[project.urls]
Homepage  = "https://github.com/srisowmya2000/termjump"
Repository = "https://github.com/srisowmya2000/termjump"

[tool.setuptools.packages.find]
where = ["."]
include = ["termjump*"]
